--- a/app/templates/pokemon.html
+++ b/app/templates/pokemon.html
@@ -1,14 +1,20 @@
 {% extends 'base.html' %}
-
+{% block title %} 
+Pokemon Info 
+{% endblock %}
 {% block content %} 
 <form action="/pokemon" method="POST">
+    {{form.hidden_tag()}}
     <div class="form-group">
-      <label for="pokemon_name">Pokemon Name</label>
-      <input type="text" class="form-control" id="pokemon_name" name="pokemon_name">
+      {{form.pokemon_name.label()}}
+      {{form.pokemon_name(class="form-control")}}
     </div>
     <br>
-    <button type="submit" class="btn btn-primary">Submit</button>
+    {{form.submit(class='btn btn-primary')}}
   </form>
+  <div>
+    <small style="color: red">{{error}}</small>
+  </div>
   {% if pokemon_info %}
   <table class="table table-dark">
     <thead>
