--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -25,6 +25,19 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="{{url_for('pokemon')}}">Pokemon Info</a>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                  <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="{{url_for('registration')}}">Registration</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="{{url_for('login')}}">Login</a>
+                      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                          <li class="nav-item">
+                          </li>
+                  </button>
+    
               </li>
             </ul>
     
