--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,17 +1,21 @@
 {% extends 'base.html' %} 
 
 {% block title %} 
-Registration
+Register
 {% endblock %}
-{% block css %} 
 
-<link rel="stylesheet" href="{{url_for('static', filename='css/login.css')}}">
-
-{% endblock %}
 {% block content %}
-<h1>Login Page</h1>
-<form action="/login" method="POST">
+<h1>Register Page</h1>
+<form action="/register" method="POST">
     {{form.hidden_tag()}}
+    <div class="form-group">
+        {{form.first_name.label()}}
+        {{form.first_name(class="form-control")}}
+    </div>
+    <div class="form-group">
+        {{form.last_name.label()}}
+        {{form.last_name(class="form-control")}}
+    </div>
     <div class="form-group">
         {{form.email.label()}}
         {{form.email(class="form-control")}}
@@ -19,6 +23,10 @@ Registration
     <div class="form-group">
         {{form.password.label()}}
         {{form.password(class="form-control")}}
+    </div>
+    <div class="form-group">
+        {{form.confirm_password.label()}}
+        {{form.confirm_password(class="form-control")}}
     </div>
     <br>
     {{form.submit(class='btn btn-primary')}}
