--- a/app/templates/greetings.html
+++ b/app/templates/greetings.html
@@ -4,6 +4,6 @@ Greetings
 {% endblock %}
 {% block content %}
 <br>
-<h1 style="text-align: center;" >Hello! Welcome To My Website! </h1>
-
+<body style="background-image: url(https://wallpapercave.com/wp/upmtCfm.jpg);">
+</body>
 {% endblock %}
