--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -9,6 +9,8 @@ Home
 
 {% endblock %}
 {% block content %}
+<body style="background-image: url(https://free4kwallpapers.com/uploads/originals/2016/09/05/pokemon-go-hd-wallpaper.jpg);">
 <br>
-<h1 class="click">Click 'Pokemon Info' to learn more about a specific pokemon</h1>
+<h1 class="click" style="color:white">Click 'Pokemon Info' to learn more about a specific pokemon</h1>
+</body>
 {% endblock %}
