--- a/app/templates/greetings.html
+++ b/app/templates/greetings.html
@@ -4,6 +4,6 @@ Greetings
 {% endblock %}
 {% block content %}
 <br>
-<body style="background-image: url(https://wallpapercave.com/wp/upmtCfm.jpg);">
+<body style="background-image: url(https://wallpapercave.com/wp/upmtCfm.jpg); background-size: cover; ">
 </body>
 {% endblock %}
